@@ -35,9 +35,20 @@ dependencies {
 	runtimeOnly("org.postgresql:postgresql")
 	annotationProcessor("org.projectlombok:lombok")
 	testImplementation("org.springframework.boot:spring-boot-starter-test")
+	testImplementation("org.mockito:mockito-core:5.5.0")
+	testCompileOnly("org.mockito:mockito-inline:5.2.0")
 	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 tasks.withType<Test> {
 	useJUnitPlatform()
+
+	//See: https://javadoc.io/doc/org.mockito/mockito-core/latest/org/mockito/Mockito.html
+	val mockitoInlineJar = configurations.testRuntimeClasspath.get().files
+		.find { it.name.contains("mockito-inline") }
+
+	if (mockitoInlineJar != null) {
+		jvmArgs("-javaagent:${mockitoInlineJar}")
+	}
+	jvmArgs("-XX:+EnableDynamicAgentLoading")
 }
